ARQ-122 Added jbossas-embedded-60 profile to examples