@@ -127,7 +127,62 @@
                <scope>test</scope>
             </dependency>
          </dependencies>
-      </profile>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                  <additionalClasspathElements>
+                    <additionalClasspathElement>${project.build.directory}/jboss-6.0.0.20100429-M3/client/jbossws-native-client.jar</additionalClasspathElement>
+                    <!--
+                      Because jbossweb.sar contains shared web.xml,
+                      which must be visible from same CL as
+                      TomcatDeployer.class.getClassLoader
+                    -->
+                    <additionalClasspathElement>${project.build.directory}/jboss-6.0.0.20100429-M3/server/default/deploy/jbossweb.sar</additionalClasspathElement>
+                  </additionalClasspathElements>
+
+                  <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                  <trimStackTrace>false</trimStackTrace>
+                  <printSummary>true</printSummary>
+                  <forkMode>once</forkMode>
+
+                  <!--
+                    MaxPermSize Required to bump the space for relective
+                    data like classes, methods, etc. EMB-41. Endorsed
+                    required for things like WS support (EMB-61)
+                  -->
+                  <argLine>-Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Djava.endorsed.dirs=${project.build.directory}/jboss-6.0.0.20100429-M3/lib/endorsed -Djboss.home=${project.build.directory}/jboss-6.0.0.20100429-M3 -Djboss.boot.server.log.dir=${project.build.directory}/jboss-6.0.0.20100429-M3</argLine>
+                </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+           <executions>
+              <execution>
+                <id>unpack</id>
+                <phase>process-test-classes</phase> <!-- So run before testing -->
+                <goals>
+                  <goal>unpack</goal>
+                </goals>
+              <configuration>
+                <artifactItems>
+                  <artifactItem>
+                    <groupId>org.jboss.jbossas</groupId>
+                    <artifactId>jboss-as-distribution</artifactId>
+                    <version>6.0.0.20100429-M3</version>
+                    <type>zip</type>
+                    <overWrite>false</overWrite>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
+                  </artifactItem>
+                </artifactItems>
+              </configuration>
+              </execution>
+            </executions>
+          </plugin>
+		</plugins>
+       </build>
+	  </profile>
       <profile>
          <id>jbossas-remote-51</id>
          <dependencies>
